Revision history for libev, a high-performance and full-featured event loop.

WISH? monotonic clocks times/GetTickCount for coarse corrections?

	- ev_once now passes both timeout and io to the callback if both
          occur concurrently, instead of giving timeouts precedence.

3.44 Mon Sep 29 05:18:39 CEST 2008
	- embed watchers now automatically invoke ev_loop_fork on the
          embedded loop when the parent loop forks.
	- new function: ev_now_update (loop).
	- verify_watcher was not marked static.
        - improve the "associating..." manpage section.
        - documentation tweaks here and there.

3.43 Sun Jul  6 05:34:41 CEST 2008
	- include more include files on windows to get struct _stati64
          (reported by Chris Hulbert, but doesn't quite fix his issue).
	- add missing #include <io.h> in ev.c on windows (reported by
          Matt Tolton).

3.42 Tue Jun 17 12:12:07 CEST 2008
	- work around yet another windows bug: FD_SET actually adds fd's
          multiple times to the fd_*SET*, despite official MSN docs claiming
          otherwise. Reported and well-analysed by Matt Tolton.
	- define NFDBITS to 0 when EV_SELECT_IS_WINSOCKET to make it compile
          (reported any analysed by Chris Hulbert).
        - fix a bug in ev_ebadf (this function is only used to catch
          programming errors in the libev user). reported by Matt Tolton.
        - fix a bug in fd_intern on win32 (could lead to compile errors
          under some circumstances, but would work correctly if it compiles).
          reported by Matt Tolton.
        - (try to) work around missing lstat on windows.
	- pass in the write fd set as except fd set under windows. windows
          is so uncontrollably lame that it requires this. this means that
          switching off oobinline is not supported (but tcp/ip doesn't
          have oob, so that would be stupid anyways.
        - use posix module symbol to auto-detect monotonic clock presence